# copilot-test

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  QT-CHAT-README.md  README.md  git-server.db  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  bashrc  devcontainer.json
ai-coding-agent/: README.md
automerge-utils/: README.md  package-lock.json  package.json  test-splice-manual.ts  test-splice-manual2.ts  test-splice-manual3.ts  tsconfig.json
backend/: go.mod  go.sum
base32/: Cargo.toml  base32.rs  base32_avx2.rs  base32_tests.rs
base32/benches/: benchmarks.rs
base32/src/: avx2.rs  lib.rs  tests.rs
base64/: Cargo.toml  base64.rs  base64_avx2.rs  base64_tests.rs
base64/benches/: benchmarks.rs
base64/src/: avx2.rs  lib.rs
blocknote-collab/: index.html  package-lock.json  package.json  (+1 more)
chacha/: Cargo.toml  chacha_avx2.rs  chacha_neon.rs  lib.rs
chacha-browser/: .gitignore  Cargo.toml  Makefile
chacha-browser/src/: lib.rs
chacha-browser/webapp/: index.html  package-lock.json  package.json
chacha-browser/webapp/src/: app.tsx
chacha-browser/webapp/src/components/: FileEncryptor.tsx
chacha/benches/: benchmarks.rs  chacha.rs
chacha/tests/: aes_ctx.rs
digital_ocean/: Cargo.toml  account.rs  databases.rs  domains.rs  droplets.rs  lib.rs  regions.rs  sizes.rs  ssh_keys.rs  tests.rs  volumes.rs
duckduckai-rs/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  VQD_CLARIFICATION.md  VQD_QUICK_REFERENCE.md  VQD_REVERSE_ENGINEERING.md  solve_challenge.js  status.sh  wpm.main.js
duckduckai-rs/src/: js_runtime.rs  lib.rs  main.rs  server.rs
duckduckai-rs/tests/: integration_test.rs  server_test.rs
duplex/: Cargo.toml  DUPLEX_AEAD_DESIGN.md  lib.rs  turboshake.rs  turboshake_aead.rs
duplex/benches/: aead_benchmarks.rs
duplex/tests/: integration_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base32.rs  fuzz_base64.rs  fuzz_hex.rs
git-server/: .gitignore  Cargo.toml  README.md  config.example.json  test.db
git-server/src/: config.rs  database.rs  error.rs  git_ops.rs  http_server.rs  main.rs  sandbox.rs  ssh_server.rs
git-server/static/: app.js  index.html
git-server/tests/: integration_tests.rs
git-server/webapp/: .env  .env.production  index.html  package-lock.json  package.json  vite.config.ts
git-server/webapp/src/: api.ts  app.tsx  index.css
git-server/webapp/src/components/: AppLayout.tsx  Header.tsx
git-server/webapp/src/pages/: BranchesPage.tsx  CalendarPage.tsx  CreateFilePage.tsx  CreateIssuePage.tsx  CreateOrgPage.tsx  CreateProjectPage.tsx  CreatePullRequestPage.tsx  CreateRepoPage.tsx  EditFilePage.tsx  FilePage.tsx  ForkRepoPage.tsx  GanttPage.tsx  HomePage.tsx  IssuePage.tsx  IssuesPage.tsx  KanbanPage.tsx  NotFoundPage.tsx  OrgPage.tsx  OrgSettingsPage.tsx  OrganizationsPage.tsx  ProjectPage.tsx  ProjectSettingsPage.tsx  PullRequestPage.tsx  PullRequestsPage.tsx  RepoPage.tsx
hex/: Cargo.toml  hex.rs  hex_avx2.rs  hex_tests.rs
hex/benches/: benchmarks.rs
hex/src/: avx2.rs  lib.rs
mocker/: Cargo.toml  report.md
mocker/mocker/: Cargo.toml
mocker/mocker-core/: Cargo.toml
mocker/mocker-core/src/: config.rs  error.rs  ffi.rs  image.rs  lib.rs  state.rs  vm.rs
mocker/mocker/src/: main.rs
mocker/mocker/src/commands/: list.rs  manage.rs  mod.rs  pull.rs  run.rs
qt-chat/: Cargo.toml
qt-chat-server/: Cargo.toml  README.md  test-api.sh
qt-chat-server/src/: main.rs
qt-chat-server/tests/: e2e.rs
qt-chat/qml/: main.qml
qt-chat/src/: main.rs
quic-vpn/: Cargo.toml  README.md
quic-vpn/src/: client.rs  lib.rs  server.rs
quic-vpn/tests/: cert_tests.rs  e2e_tests.rs  integration_tests.rs  packet_tests.rs
s3server/: Cargo.toml
s3server/src/: auth.rs  database.rs  http_server.rs  main.rs  storage.rs  xml_responses.rs
s3server/tests/: integration_tests.rs  sdk_tests.rs
scaleway/: Cargo.toml
scaleway/src/: client.rs  elastic_metal.rs  inference.rs  instances.rs  key_manager.rs  lib.rs  tests.rs
spreadsheet-server/: Cargo.toml
spreadsheet-server/src/: main.rs
tui-browser/: CHANGES.md  Cargo.toml  DEMO.md  FEATURES.md  IMPLEMENTATION.md  README.md  demo.sh  demo_output.txt
tui-browser/src/: http_client.rs  lib.rs  main.rs  models.rs  ui.rs
tui-browser/tests/: integration_tests.rs
tui-calc/: Cargo.toml  README.md
tui-calc/src/: calc.rs  main.rs
tui-chat/: Cargo.toml  IMPLEMENTATION.md  README.md  TESTING.md
tui-chat/src/: main.rs  mock_data.rs  ui.rs
tui-kaban/: Cargo.toml  README.md
tui-kaban/src/: main.rs
tui-kaban/tests/: integration_tests.rs
tui-mindmap/: Cargo.toml  IMPLEMENTATION.md  README.md
tui-mindmap/src/: main.rs  models.rs  ui.rs
tui-music/: Cargo.toml  README.md
tui-music/src/: library.rs  main.rs  player.rs  ui.rs
tui-notion/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TEST_GUIDE.md  VISUAL_GUIDE.md
tui-notion/src/: document.rs  editor.rs  history.rs  main.rs  search.rs  storage.rs  toc.rs  tree.rs  ui.rs
tui-pass/: .gitignore  CRYPTOGRAPHIC_ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  test.sh
tui-pass/proto/: vault.proto
tui-pass/src/: crypto.rs  main.rs  ui.rs
tui-rss/: Cargo.toml  README.md
tui-rss/src/: feed_manager.rs  main.rs  ui.rs
tui-spreadsheet/: CHANGES.md  Cargo.toml  EXAMPLES.md  README.md  SCREENSHOT.txt  test_formula.sh
tui-spreadsheet/src/: formula.rs  main.rs
turboshake/: Cargo.toml  kangaroo.rs  lib.rs  turboshake.rs  turboshake_aead.rs
turboshake/benches/: benchmarks.rs
turboshake/tests/: integration_tests.rs
vectordb/: Cargo.toml
vectordb/src/: api.rs  cache.rs  database.rs  error.rs  filter.rs  index.rs  main.rs  search.rs  storage.rs
vectordb/tests/: integration_tests.rs
vectordb/webapp/: index.html  package-lock.json  package.json  vite.config.ts
vectordb/webapp/src/: api.ts  app.tsx
vectordb/webapp/src/components/: AppLayout.tsx
vectordb/webapp/src/pages/: ApiKeysPage.tsx  DocumentPage.tsx  DocumentsPage.tsx  NamespacePage.tsx  NamespacesPage.tsx  QueryPage.tsx
(+525 files in other folders)
