[package]
name = "base32"
version = "0.1.0"
edition = "2021"
description = "A library for base32 encoding and decoding with AVX2 acceleration"
license = "MIT"

[lib]
path = "base32.rs"

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
base32-external = { package = "base32", version = "0.5" }

[[bench]]
name = "benchmarks"
harness = false
