[package]
name = "base64"
version = "0.1.0"
edition = "2021"
description = "A library for base64 encoding and decoding"
license = "MIT"

[lib]
path = "base64.rs"

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
base64-external = { package = "base64", version = "0.22.1" }
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
