[package]
name = "digital_ocean"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the DigitalOcean API"
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
