[package]
name = "duckduckai"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["charset", "cookies", "gzip", "hickory-dns", "http2", "json", "multipart", "rustls-tls", "zstd", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
aws-lc-rs = "1"
headless_chrome = "1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-stream = "0.3"

[dev-dependencies]
async-openai = "0.28"
