[package]
name = "git-server"
version = "0.1.0"
edition = "2021"
description = "A Git server over SSH implemented in Rust"
license = "MIT"

[[bin]]
name = "git-server"
path = "src/main.rs"

[dependencies]
russh = "0.54"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "net", "fs"] }
thiserror = "2.0"
rand_core = "0.6"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.20"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", features = ["json"] }
