[package]
name = "hex"
version = "0.1.0"
edition = "2021"
description = "A library for hex encoding and decoding with AVX2 acceleration"
license = "MIT"

[lib]
path = "hex.rs"

[dependencies]

[dev-dependencies]
criterion = { workspace = true }
hex-external = { package = "hex", version = "0.4" }

[[bench]]
name = "benchmarks"
harness = false
