[workspace]
resolver = "2"
members = ["mocker", "mocker-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/notABot101010/copilot-test"

[workspace.dependencies]
mocker-core = { path = "mocker-core" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
nix = { version = "0.30", features = ["signal", "process", "fs"] }
