[package]
name = "qt-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
qmetaobject = "0.2.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cpp_build = "0.5"
