[package]
name = "quic-vpn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio-quiche = { git = "https://github.com/cloudflare/quiche", branch = "master" }
quiche = { git = "https://github.com/cloudflare/quiche", branch = "master", features = ["boringssl-boring-crate"] }
tokio = { version = "1.42", features = ["full"] }
tun2 = { version = "2.0", features = ["async"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bytes = "1.8"
ring = "0.17"
rcgen = "0.13"

[dev-dependencies]
tempfile = "3.15"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
