[package]
name = "scaleway"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the Scaleway API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
