[package]
name = "tui-browser"
version = "0.1.0"
edition = "2021"
description = "A terminal-based web browser using ratatui, tokio and reqwest"
license = "MIT"

[[bin]]
name = "tui-browser"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
html2text = "0.12"
url = "2.5"
