[package]
name = "tui-calc"
version = "0.1.0"
edition = "2021"
description = "A terminal-based calculator with history support"
license = "MIT"

[[bin]]
name = "tui-calc"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-bigfloat = "1.7"
num-traits = "0.2"
rustyline = "15.0"
anyhow = "1.0"
