[package]
name = "tui-kaban"
version = "0.1.0"
edition = "2021"
description = "A terminal-based kanban board application using ratatui"
license = "MIT"

[[bin]]
name = "tui-kaban"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
