[package]
name = "tui-mindmap"
version = "0.1.0"
edition = "2021"
description = "A terminal-based mindmap application using ratatui"
license = "MIT"

[[bin]]
name = "tui-mindmap"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
unicode-width = "0.2"
