[package]
name = "tui-music"
version = "0.1.0"
edition = "2021"
description = "A terminal-based music player using ratatui"
license = "MIT"

[[bin]]
name = "tui-music"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
rodio = "0.19"
symphonia = { version = "0.5", features = ["all"] }
walkdir = "2.5"
