[package]
name = "tui-pass"
version = "0.1.0"
edition = "2021"
description = "A terminal-based password manager using ratatui with encrypted vaults"
license = "MIT"

[[bin]]
name = "tui-pass"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
blake3 = "1.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
