[package]
name = "tui-rss"
version = "0.1.0"
edition = "2021"
description = "A terminal-based RSS reader using ratatui"
license = "MIT"

[[bin]]
name = "tui-rss"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
feed-rs = "2.2"
reqwest = { version = "0.12", features = ["blocking"] }
tui-input = "0.14"
html2text = "0.12"
